# rag_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conf.example.yaml  conf.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/: interactive_page.py  main.py
src/agents/: __init__.py  agents.py
src/api/: api.py  auth.py  chatbot.py
src/config/: __init__.py  agents.py  llm_management.py  loader.py  redis.py  setting.py
src/entity/: dto.py
src/graph/: builder.py  node.py  types.py
src/llms/: llm.py
src/main_graph/: main_graph_states.py  multi_agent.py  prompt.py
src/prompts/: __init__.py  answer.py  chat.py  general_answer.py  get_memory.py  research.py  route.py  supervisor.py  template.py  update_memory.py
src/rag/: retriever.py
src/resource/markdown/: 中央及银保监会金融监管政策文件汇编.md
src/schema/: auth.py  chat.py  history.py  redis.py  session.py  user.py  user_input.py
src/script/: delete_no_content_title.py  process_markdown.py  process_markdown_title.py  process_pdf.py  the_same_level_title.py
src/services/: database.py  milvus.py
src/sub_graph/: prompt.py  search_server.py  search_tools.py  sub_graph_states.py  todolist_agent.py
src/test/: insert_milvus.py  redis_test.py  test.py
src/utils/: auth.py  conversation_manager.py  embedding.py  milvus_collection.py
