[project]
name = "todolist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "dashscope>=1.24.4",
    "docling>=2.53.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.5.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-deepseek>=0.1.3",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-openai>=0.3.17",
    "langchain-tavily>=0.2.0",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
    "loguru>=0.7.3",
    "mcp>=1.9.2",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.4",
    "pymilvus>=2.6.1",
    "python-jose>=3.5.0",
    "redis>=6.4.0",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "trustcall>=0.0.39",
    "uvicorn>=0.34.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "langchain-milvus>=0.2.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
